<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.drf.grpc.demo</groupId>
    <artifactId>grpc-proto-demo</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>grpc proto demo</name>

    <modules>
        <module>grpc-proto-common</module>
        <module>grpc-proto-server</module>
        <module>grpc-proto-client</module>
    </modules>

    <properties>
        <java.version>13</java.version>
        <java.enable.preview>--enable-preview</java.enable.preview>
        <grpc.version>1.27.0</grpc.version>
        <protobuf.version>3.16.1</protobuf.version>
        <armeria.version>0.98.2</armeria.version>

        <os-maven-plugin.version>1.6.2</os-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-api</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>

            <!-- armeria -->
            <dependency>
                <groupId>com.linecorp.armeria</groupId>
                <artifactId>armeria</artifactId>
                <version>${armeria.version}</version>
            </dependency>
            <dependency>
                <groupId>com.linecorp.armeria</groupId>
                <artifactId>armeria-grpc</artifactId>
                <version>${armeria.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.linecorp.armeria</groupId>
            <artifactId>armeria</artifactId>
            <version>${armeria.version}</version>
        </dependency>
        <dependency>
            <groupId>com.linecorp.armeria</groupId>
            <artifactId>armeria-grpc</artifactId>
            <version>${armeria.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <compilerArgs>${java.enable.preview}</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>